syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option java_package = "com.ro0sterware.protovalidator";

message TestMessage {
    double double_field = 1;
    float float_field = 2;
    int32 int32_field = 3;
    int64 int64_field = 4;
    uint32 uint32_field = 5;
    uint64 uint64_field = 6;
    sint32 sint32_field = 7;
    sint64 sint64_field = 8;
    fixed32 fixed32_field = 9;
    fixed64 fixed64_field = 10;
    sfixed32 sfixed32_field = 11;
    sfixed64 sfixed64_field = 12;
    bool bool_field = 13;
    string string_field = 14;
    bytes bytes_field = 15;
    TestEnum test_enum_field = 16;
    TestNestedMessage test_nested_message_field = 17;
    repeated string repeated_field = 18;
    oneof oneof_field {
      google.protobuf.StringValue first_oneof_field = 19;
      int32 second_oneof_field = 20;
    }
    google.protobuf.DoubleValue double_wrapper_field = 21;
    google.protobuf.FloatValue float_wrapper_field = 22;
    google.protobuf.Int64Value int64_wrapper_field = 23;
    google.protobuf.UInt64Value uint64_wrapper_field = 24;
    google.protobuf.Int32Value int32_wrapper_field = 25;
    google.protobuf.UInt32Value uint32_wrapper_field = 26;
    google.protobuf.BoolValue bool_wrapper_field = 27;
    google.protobuf.StringValue string_wrapper_field = 28;
    google.protobuf.BytesValue bytes_wrapper_field = 29;
    google.protobuf.Timestamp timestamp_field = 30;
    google.protobuf.Duration duration_field = 31;
}

enum TestEnum {
    TEST_ENUM_UNSPECIFIED = 0;
    TEST_ENUM_FIRST = 1;
    TEST_ENUM_SECOND = 2;
}

message TestNestedMessage {
    int32 int32_field = 1;
    google.protobuf.StringValue string_wrapper_field = 2;
}

